--- a/detalle.html
+++ b/detalle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAC-Movies</title>
-    <link rel="stylesheet" href="../Statics/css/style1.css">
+    <link rel="stylesheet" href="../CACMovie/Statics/css/style1.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&amp;display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -20,8 +20,8 @@
             <ul class="span">
                 <li class="listaItem"><a class="linkNav" href="index.html#tendencias">Tendencias</a></li>
                 <li class="listaItem"><a class="linkNav" href="index.html#aclamadasContainer">Aclamadas</a></li>
-                <li class="listaItem"><a class="linkNav" href="../registrarse.html">Registrarse</a></li>
-                <li class="listaItem"><a class="linkNav" href="../iniciosesion.html">Iniciar Sesión</a></li>
+                <li class="listaItem"><a class="linkNav" href="../CACMovie/registrarse.html">Registrarse</a></li>
+                <li class="listaItem"><a class="linkNav" href="../CACMovie/iniciosesion.html">Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
       <section class="sectiondetalle">
         <div class="contenedorDetalle">
             <div class="imgDetalle">
-                <img src="../Statics/img/mario.jpg" alt="mario pelicula 2023">
+                <img src="../CACMovie/Statics/img/mario.jpg" alt="mario pelicula 2023">
             </div>
             <div class="textoDetalle">
                 <h1>The Super Mario Bros. Movie (2023)</h1>
@@ -113,7 +113,7 @@
             </ul>
         </nav>
         <a href="#" class="flechaArriba">
-            <img src="../Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha">
+            <img src="../CACMovie/Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha">
         </a>
     </footer>
    
