--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAC-Movies</title>
-    <link rel="stylesheet" href="../Statics/css/style1.css">
+    <link rel="stylesheet" href="../CACMovie/Statics/css/style1.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&amp;display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -20,8 +20,8 @@
     <ul class="span">
         <li><a href="#tendencias">Tendencias</a></li>
         <li><a href="#aclamadasContainer">Aclamadas</a></li>
-        <li><a href="../registrarse.html">Registrarse</a></li>
-        <li><a href="../iniciosesion.html">Iniciar Sesión</a></li>
+        <li><a href="../CACMovie/registrarse.html">Registrarse</a></li>
+        <li><a href="../CACMovie/iniciosesion.html">Iniciar Sesión</a></li>
         
     </ul>
 </nav>
@@ -46,26 +46,26 @@
 <h3 class="tituloSection">Las tendencias de hoy</h3>
 
 <div class="peliculas" id="tendenciasContainer">
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//1pdfLvkbY9ohJlCjQH2CZjjYVvJ.jpg" alt="Dune: Part Two" loading="lazy"><div class="tituloPelicula"><h4>Dune: Part Two</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//f7QBvIzoWSJw3jWPGnZBc5vwQ0l.jpg" alt="Kung Fu Panda 4" loading="lazy"><div class="tituloPelicula"><h4>Kung Fu Panda 4</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//tMefBSflR6PGQLv7WvFPpKLZkyk.jpg" alt="Godzilla x Kong: The New Empire" loading="lazy"><div class="tituloPelicula"><h4>Godzilla x Kong: The New Empire</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//8QVDXDiOGHRcAD4oM6MXjE0osSj.jpg" alt="Alienoid" loading="lazy"><div class="tituloPelicula"><h4>Alienoid</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//jFK2ZLQUzo9pea0jfMCHDfvWsx7.jpg" alt="The Wages of Fear" loading="lazy"><div class="tituloPelicula"><h4>The Wages of Fear</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//bXi6IQiQDHD00JFio5ZSZOeRSBh.jpg" alt="Road House" loading="lazy"><div class="tituloPelicula"><h4>Road House</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//rULWuutDcN5NvtiZi4FRPzRYWSh.jpg" alt="Madame Web" loading="lazy"><div class="tituloPelicula"><h4>Madame Web</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//p1LbrdJ53dGfEhRopG71akfzOVu.jpg" alt="After the Pandemic" loading="lazy"><div class="tituloPelicula"><h4>After the Pandemic</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//uoBHsxSgfc3PQsSn98RfnbePHOy.jpg" alt="The Tearsmith" loading="lazy"><div class="tituloPelicula"><h4>The Tearsmith</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//n726fdyL1dGwt15bY7Nj3XOXc4Q.jpg" alt="Heart of the Hunter" loading="lazy"><div class="tituloPelicula"><h4>Heart of the Hunter</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//ccJpK0rqzhQeP7Mrs2uKqObFY4L.jpg" alt="Creation of the Gods I: Kingdom of Storms" loading="lazy"><div class="tituloPelicula"><h4>Creation of the Gods I: Kingdom of Storms</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//ldfCF9RhR40mppkzmftxapaHeTo.jpg" alt="Migration" loading="lazy"><div class="tituloPelicula"><h4>Migration</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//oPXzCV01ysDmnmpJOkiVqaZQ5QR.jpg" alt="The Adventures of Maid Marian" loading="lazy"><div class="tituloPelicula"><h4>The Adventures of Maid Marian</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//lbOyeiiRYAE6Nm2e7xiNAAaRwZB.jpg" alt="Baghead" loading="lazy"><div class="tituloPelicula"><h4>Baghead</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//9u6HEtZJdZDjPGGJq6YEuhPnoan.jpg" alt="Imaginary" loading="lazy"><div class="tituloPelicula"><h4>Imaginary</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//aqRXm3OXSVWuGp3bl8YO4szmos3.jpg" alt="Penoza: The Final Chapter" loading="lazy"><div class="tituloPelicula"><h4>Penoza: The Final Chapter</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//3UKlVa1CBeQkRksHV5OfFTO52qd.jpg" alt="Hunters" loading="lazy"><div class="tituloPelicula"><h4>Hunters</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//AgHbB9DCE9aE57zkHjSmseszh6e.jpg" alt="Damsel" loading="lazy"><div class="tituloPelicula"><h4>Damsel</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//hu40Uxp9WtpL34jv3zyWLb5zEVY.jpg" alt="No Way Up" loading="lazy"><div class="tituloPelicula"><h4>No Way Up</h4></div></div></a></div>
-    <div class="peliculas"><a href="../detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//d5NXSklXo0qyIYkgV94XAgMIckC.jpg" alt="Dune" loading="lazy"><div class="tituloPelicula"><h4>Dune</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//1pdfLvkbY9ohJlCjQH2CZjjYVvJ.jpg" alt="Dune: Part Two" loading="lazy"><div class="tituloPelicula"><h4>Dune: Part Two</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//f7QBvIzoWSJw3jWPGnZBc5vwQ0l.jpg" alt="Kung Fu Panda 4" loading="lazy"><div class="tituloPelicula"><h4>Kung Fu Panda 4</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//tMefBSflR6PGQLv7WvFPpKLZkyk.jpg" alt="Godzilla x Kong: The New Empire" loading="lazy"><div class="tituloPelicula"><h4>Godzilla x Kong: The New Empire</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//8QVDXDiOGHRcAD4oM6MXjE0osSj.jpg" alt="Alienoid" loading="lazy"><div class="tituloPelicula"><h4>Alienoid</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//jFK2ZLQUzo9pea0jfMCHDfvWsx7.jpg" alt="The Wages of Fear" loading="lazy"><div class="tituloPelicula"><h4>The Wages of Fear</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//bXi6IQiQDHD00JFio5ZSZOeRSBh.jpg" alt="Road House" loading="lazy"><div class="tituloPelicula"><h4>Road House</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//rULWuutDcN5NvtiZi4FRPzRYWSh.jpg" alt="Madame Web" loading="lazy"><div class="tituloPelicula"><h4>Madame Web</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//p1LbrdJ53dGfEhRopG71akfzOVu.jpg" alt="After the Pandemic" loading="lazy"><div class="tituloPelicula"><h4>After the Pandemic</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//uoBHsxSgfc3PQsSn98RfnbePHOy.jpg" alt="The Tearsmith" loading="lazy"><div class="tituloPelicula"><h4>The Tearsmith</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//n726fdyL1dGwt15bY7Nj3XOXc4Q.jpg" alt="Heart of the Hunter" loading="lazy"><div class="tituloPelicula"><h4>Heart of the Hunter</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//ccJpK0rqzhQeP7Mrs2uKqObFY4L.jpg" alt="Creation of the Gods I: Kingdom of Storms" loading="lazy"><div class="tituloPelicula"><h4>Creation of the Gods I: Kingdom of Storms</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//ldfCF9RhR40mppkzmftxapaHeTo.jpg" alt="Migration" loading="lazy"><div class="tituloPelicula"><h4>Migration</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//oPXzCV01ysDmnmpJOkiVqaZQ5QR.jpg" alt="The Adventures of Maid Marian" loading="lazy"><div class="tituloPelicula"><h4>The Adventures of Maid Marian</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//lbOyeiiRYAE6Nm2e7xiNAAaRwZB.jpg" alt="Baghead" loading="lazy"><div class="tituloPelicula"><h4>Baghead</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//9u6HEtZJdZDjPGGJq6YEuhPnoan.jpg" alt="Imaginary" loading="lazy"><div class="tituloPelicula"><h4>Imaginary</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//aqRXm3OXSVWuGp3bl8YO4szmos3.jpg" alt="Penoza: The Final Chapter" loading="lazy"><div class="tituloPelicula"><h4>Penoza: The Final Chapter</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//3UKlVa1CBeQkRksHV5OfFTO52qd.jpg" alt="Hunters" loading="lazy"><div class="tituloPelicula"><h4>Hunters</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//AgHbB9DCE9aE57zkHjSmseszh6e.jpg" alt="Damsel" loading="lazy"><div class="tituloPelicula"><h4>Damsel</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//hu40Uxp9WtpL34jv3zyWLb5zEVY.jpg" alt="No Way Up" loading="lazy"><div class="tituloPelicula"><h4>No Way Up</h4></div></div></a></div>
+    <div class="peliculas"><a href="../CACMovie/detalle.html"><div class="pelicula"><img class="imgTendencia" src="https://image.tmdb.org/t/p/w500//d5NXSklXo0qyIYkgV94XAgMIckC.jpg" alt="Dune" loading="lazy"><div class="tituloPelicula"><h4>Dune</h4></div></div></a></div>
 </div>
 </section>
 
@@ -85,7 +85,7 @@
             <li><a href>Administrador Peliculas</a></li>
         </ul>
     </nav>
-    <a href="#" class="flechaArriba"><img src="../Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha"></a>
+    <a href="#" class="flechaArriba"><img src="../CACMovie/Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha"></a>
 </footer>
 </body>
 </html>
