mejora de visualizacion

--- a/detalle.html
+++ b/detalle.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="navegacion">
-            <a class="anclaLogo" href="../index.html">
+            <a class="anclaLogo" href="./index.html">
                 <i class="fas fa-film" aria-hidden="true"></i>
                 <span>CAC-Movies</span>
             </a>
@@ -66,10 +66,10 @@
             <div class="redes">
                 <ul>
                     <li>Seguinos en las redes sociales.</li>
-                    <li><a href="https://www.facebook.com/supermariomovie" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://twitter.com/supermariomovie" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://instagram.com/supermariomovie/"><i class="fab fa-instagram" target="_blank" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.thesupermariobros.movie/"><i class="fas fa-link" target="_blank" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/supermariomovie" target="_blank"><i class="fab fa-facebook" id="social" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/supermariomovie" target="_blank"><i class="fab fa-twitter" id="social" aria-hidden="true"></i></a></li>
+                    <li><a href="https://instagram.com/supermariomovie/"><i class="fab fa-instagram" id="social" target="_blank" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.thesupermariobros.movie/"><i class="fas fa-link" id="social" target="_blank" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="info">
@@ -109,7 +109,7 @@
                 <li class="listaItem"><a class="linkNav" href="">Términos y condiciones</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Preguntas frecuentes</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Ayuda</a></li>
-                <li class="listaItem"><a class="linkNavks" href="">Administrador Peliculas</a></li>
+                <li class="listaItem"><a class="linkNav" href="">Administrador Peliculas</a></li>
             </ul>
         </nav>
         <a href="#" class="flechaArriba">
