agregado al formulario

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <section class="form">
 <h2>¿Qué estas buscando para ver?</h2>
-<form action="">
+<form action="" method="post">
 <input class="inputBuscador" type="text" placeholder="Buscar..." id="buscar" name="buscar">
 <input class="botonBuscador" type="submit" value="Buscar">    
 </form>
