--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <footer class="footer">
     <nav>
         <ul>
-            <li><a>Términos y condiciones</a></li>
-            <li><a>Preguntas frecuentes</a></li>
-            <li><a>Ayuda</a></li>
-            <li><a>Administrador Peliculas</a></li>
+            <li><a href="../CACMovie/ayuda.html#terminos">Términos y condiciones</a></li>
+            <li><a href="../CACMovie/ayuda.html#ayuda">Preguntas frecuentes</a></li>
+            <li><a href="../CACMovie/ayuda.html#ayuda">Ayuda</a></li>
+            <li><a href="../CACMovie/ayuda.html#quienes-somos">Administrador Peliculas</a></li>
         </ul>
     </nav>
     <a href="#" class="flechaArriba"><img src="../CACMovie/Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha"></a>
