--- a/detalle.html
+++ b/detalle.html
@@ -106,10 +106,10 @@
     <footer class="footer">
         <nav class="navegacion">
             <ul class="listaNav">
-                <li class="listaItem"><a class="linkNav" href="">Términos y condiciones</a></li>
-                <li class="listaItem"><a class="linkNav" href="">Preguntas frecuentes</a></li>
-                <li class="listaItem"><a class="linkNav" href="">Ayuda</a></li>
-                <li class="listaItem"><a class="linkNav" href="">Administrador Peliculas</a></li>
+            <li><a href="../CACMovie/ayuda.html#terminos">Términos y condiciones</a></li>
+            <li><a href="../CACMovie/ayuda.html#ayuda">Preguntas frecuentes</a></li>
+            <li><a href="../CACMovie/ayuda.html#ayuda">Ayuda</a></li>
+            <li><a href="../CACMovie/ayuda.html#quienes-somos">Administrador Peliculas</a></li>
             </ul>
         </nav>
         <a href="#" class="flechaArriba">
