Consume y busca API

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <h2>Disfruta donde quieras. Cancela en cualquier momento.</h2>
 </section>
 
-<section class="form">
+<section class="form" id="form">
 <h2>¿Qué estas buscando para ver?</h2>
-<form action="" method="post">
-<input class="inputBuscador" type="text" placeholder="Buscar..." id="buscar" name="buscar">
-<input class="botonBuscador" type="submit" value="Buscar">    
+<form name="myForm3" class="formulario3" id="formulario3">
+<input class="inputBuscador" type="text" placeholder="Ingrese titulo a buscar..." id="buscar" name="buscar">
+<button type="submit" class="botonBuscador" id="botonBuscador">Buscar</button>  
 </form>
 </section>
 
@@ -86,5 +86,6 @@
     </nav>
     <a href="#" class="flechaArriba"><img src="../CACMovie/Statics/img/flecha-hacia-arriba.png" alt="ir arriba flecha"></a>
 </footer>
+<script src="../CACMovie/Statics/js/buscarDatos.js"></script>
 </body>
 </html>
