--- a/registrarse.html
+++ b/registrarse.html
@@ -64,7 +64,7 @@
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <button class="boton" id="boton" type="submit">Registrarse</button>
+                    <button type="submit" class="boton" id="boton">Registrarse</button>
                 </div>
                 <div>
                     <a class="ayuda" href="../CACMovie/ayuda.html#ayuda">Necesitas ayuda?</a>
