required en form de busqueda en html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="form" id="form">
 <h2>¿Qué estas buscando para ver?</h2>
 <form name="myForm3" class="formulario3" id="formulario3">
-<input class="inputBuscador" type="text" placeholder="Ingrese titulo a buscar..." id="buscar" name="buscar">
+<input class="inputBuscador" type="text" placeholder="Ingrese titulo a buscar..." id="buscar" name="buscar" required>
 <button type="submit" class="botonBuscador" id="botonBuscador">Buscar</button>  
 </form>
 </section>
