--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <i class="fas fa-film" aria-hidden="true"></i>
         <span>CAC-Movies</span>
     </a>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </label>
     <ul class="span">
         <li><a href="#tendencias">Tendencias</a></li>
         <li><a href="#aclamadasContainer">Aclamadas</a></li>
