mejora visibildad registrarse e inicion de sesion

--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -23,20 +23,20 @@
         <section class="seccionRegistrarse">
             <form name="myForm2" method="post" class="formulario2" id="formulario2">
                 <h2 class="tituloRegistrarse">Iniciar Sesión</h2>
-                <div>
+                <div class="error-text">
                     <input type="email" placeholder="Email" id="email" name="email" required>
                     <div class="error-text"></div>
                 </div>
-                <div>
+                <div class="error-text">
                     <input type="password" placeholder="Contraseña" id="password" name="password" required>
                     <div class="error-text"></div>
                 </div>
                 
-                <div>
+                <div class="botonGeneral">
                     <button type="submit" class="boton" id="boton">Iniciar Sesión</button>
                 </div>
                 
-                <div>
+                <div class="error-text">
                     <a id="ayuda" class="ayuda" href="registrarse.html">Registrarse</a>
                 </div>
             </form>
